--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
     <script src="//d3js.org/d3.v3.min.js"></script>
     <link rel="stylesheet" type="text/css"
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,600">
-    <link rel="stylesheet" type="text/css" href="sequences.css"/>
+    <link rel="stylesheet" type="text/css" href="css/sequences.css"/>
   </head>
   <body>
     <div id="main">
