--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <p>This is where there is stuff</p>
+    <a href="pancreasMinusSalivary.html">Pancreas vs Salivary</a>
     <a href="test.html">On the fly?</a>
     <a href="LowCovScorePath.html">lowCovPathSeq</a>
     <a href="sunBurstTest.html">sunBurstTest</a>
