--- a/staticBurst.html
+++ b/staticBurst.html
@@ -55,3 +55,88 @@ function update(method) {
     </select>
   </div></div></body>
 </html>
+
+var flare = {
+    "root": {
+        "Rhizobium": "1",
+        "cellular_organisms": {
+            "Rhizobium": "1",
+            "Bacteria": {
+                "Rhizobium": "1",
+                "Proteobacteria": {
+                    "Rhizobium": "1",
+                    "Alphaproteobacteria": {
+                        "Rhizobium": "1",
+                        "Rhizobiales": {
+                            "Rhizobium": "1",
+                            "Rhizobiaceae": {
+                                "Rhizobium": "1",
+                                "Rhizobium/Agrobacterium_group": {
+                                    "Rhizobium": "1"
+                                }
+                            }
+                        }
+                    },
+                    "Pantoea_sp._SL1_M5": "4",
+                    "Gammaproteobacteria": {
+                        "Pantoea_sp._SL1_M5": "4",
+                        "Enterobacterales": {
+                            "Pantoea_sp._SL1_M5": "4",
+                            "Erwiniaceae": {
+                                "Pantoea_sp._SL1_M5": "4",
+                                "Pantoea": {
+                                    "Pantoea_sp._SL1_M5": "4",
+                                    "Pantoea_agglomerans_group": "1"
+                                },
+                                "Pantoea_agglomerans_group": "1"
+                            },
+                            "Pantoea_agglomerans_group": "1"
+                        },
+                        "Pantoea_agglomerans_group": "1",
+                        "Stenotrophomonas_rhizophila": "9",
+                        "Xanthomonadales": {
+                            "Stenotrophomonas_rhizophila": "9",
+                            "Xanthomonadaceae": {
+                                "Stenotrophomonas_rhizophila": "9",
+                                "Stenotrophomonas": {
+                                    "Stenotrophomonas_rhizophila": "9"
+                                }
+                            }
+                        }
+                    },
+                    "Pantoea_agglomerans_group": "1",
+                    "Stenotrophomonas_rhizophila": "9"
+                },
+                "Pantoea_sp._SL1_M5": "4",
+                "Pantoea_agglomerans_group": "1",
+                "Stenotrophomonas_rhizophila": "9"
+            },
+            "Pantoea_sp._SL1_M5": "4",
+            "Pantoea_agglomerans_group": "1",
+            "Stenotrophomonas_rhizophila": "9",
+            "Babesia": "2",
+            "Eukaryota": {
+                "Babesia": "2",
+                "Alveolata": {
+                    "Babesia": "2",
+                    "Apicomplexa": {
+                        "Babesia": "2",
+                        "Aconoidasida": {
+                            "Babesia": "2",
+                            "Piroplasmida": {
+                                "Babesia": "2",
+                                "Babesiidae": {
+                                    "Babesia": "2"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "Pantoea_sp._SL1_M5": "4",
+        "Pantoea_agglomerans_group": "1",
+        "Stenotrophomonas_rhizophila": "9",
+        "Babesia": "2"
+    }
+}
