--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <a href="LowCovScorePath.html">lowCovPathSeq</a>
     <a href="sunBurstTest.html">sunBurstTest</a>
     <a href="ATAQC.html">ATACQC</a>
+    <a href="staticBurst.html">staticBurstTest</a>
   </body> 
 </html>
