--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   </head>
   <body>
     <p>This is where there is stuff</p>
+    <a href="nellieTreeMap.pdf">Nellie Tree Map</a>
+    <a href="nellieTreeGraph.pdf">Nellie Tree Graph</a>
     <a href="pancreasMinusSalivary.html">Pancreas vs Salivary</a>
     <a href="test.html">On the fly?</a>
     <a href="LowCovScorePath.html">lowCovPathSeq</a>
