--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   </head>
   <body>
     <p>This is where there is stuff</p>
+    <a href="/data/NelGood_sal_1.bam.pathseq.txt">Nellie Data</a>
     <a href="nellieTreeMap.pdf">Nellie Tree Map</a>
     <a href="nellieTreeGraph.pdf">Nellie Tree Graph</a>
-    <a href="pancreasMinusSalivary.html">Pancreas vs Salivary</a>
-    <a href="test.html">On the fly?</a>
-    <a href="LowCovScorePath.html">lowCovPathSeq</a>
+    #<a href="pancreasMinusSalivary.html">Pancreas vs Salivary</a>
+    #<a href="test.html">On the fly?</a>
+    #<a href="LowCovScorePath.html">lowCovPathSeq</a>
     <a href="sunBurstTest.html">sunBurstTest</a>
-    <a href="ATAQC.html">ATACQC</a>
-    <a href="staticBurst.html">staticBurstTest</a>
+    #<a href="ATAQC.html">ATACQC</a>
+    #<a href="staticBurst.html">staticBurstTest</a>
   </body> 
 </html>
