--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <a href="/data/NelGood_sal_1.bam.pathseq.txt">Nellie Data</a>
     <a href="nellieTreeMap.pdf">Nellie Tree Map</a>
     <a href="nellieTreeGraph.pdf">Nellie Tree Graph</a>
-    #<a href="pancreasMinusSalivary.html">Pancreas vs Salivary</a>
+    <a href="sunBurstTest.html">sunBurstTest</a>    
+    <!--#<a href="pancreasMinusSalivary.html">Pancreas vs Salivary</a>
     #<a href="test.html">On the fly?</a>
     #<a href="LowCovScorePath.html">lowCovPathSeq</a>
-    <a href="sunBurstTest.html">sunBurstTest</a>
     #<a href="ATAQC.html">ATACQC</a>
-    #<a href="staticBurst.html">staticBurstTest</a>
+    #<a href="staticBurst.html">staticBurstTest</a>-->
   </body> 
 </html>
