--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   </head>
   <body>
     <p>This is where there is stuff</p>
-    <a href="/data/NelGood_sal_1.bam.pathseq.txt">Nellie Data</a>
+    <a href="/data/nellieShortData.html">Nellie Data</a>
     <a href="nellieTreeMap.pdf">Nellie Tree Map</a>
     <a href="nellieTreeGraph.pdf">Nellie Tree Graph</a>
-    <a href="sunBurstTest.html">sunBurstTest</a>    
+    <a href="sunBurstTest.html">sunBurstTest</a>
     <!--#<a href="pancreasMinusSalivary.html">Pancreas vs Salivary</a>
     #<a href="test.html">On the fly?</a>
     #<a href="LowCovScorePath.html">lowCovPathSeq</a>
