--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <a href="nellieTreeMap.pdf">Nellie Tree Map</a>
     <a href="nellieTreeGraph.pdf">Nellie Tree Graph</a>
     <a href="sunBurstTest.html">sunBurstTest</a>
+    <a href="nellieCirclePack.html">Nellie Circle Pack</a>
     <!--#<a href="pancreasMinusSalivary.html">Pancreas vs Salivary</a>
     #<a href="test.html">On the fly?</a>
     #<a href="LowCovScorePath.html">lowCovPathSeq</a>
