--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <p>This is where there is stuff</p>
+    <a href="ATAQC.html">ATACQC</a>
     <a href="/data/nellieShortData.html">Nellie Data</a>
     <a href="nellieTreeMap.pdf">Nellie Tree Map</a>
     <a href="nellieTreeGraph.pdf">Nellie Tree Graph</a>
@@ -13,7 +14,7 @@
     <!--#<a href="pancreasMinusSalivary.html">Pancreas vs Salivary</a>
     #<a href="test.html">On the fly?</a>
     #<a href="LowCovScorePath.html">lowCovPathSeq</a>
-    #<a href="ATAQC.html">ATACQC</a>
+    <a href="ATAQC.html">ATACQC</a>
     #<a href="staticBurst.html">staticBurstTest</a>-->
   </body> 
 </html>
