--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <a href="nellieTreeGraph.pdf">Nellie Tree Graph</a>
     <a href="sunBurstTest.html">sunBurstTest</a>
     <a href="/data/nellieCirclePack.html">Nellie Circle Pack</a>
+    <a href="/data/sankeyExample.html">SankeyTest</a>
     <!--#<a href="pancreasMinusSalivary.html">Pancreas vs Salivary</a>
     #<a href="test.html">On the fly?</a>
     #<a href="LowCovScorePath.html">lowCovPathSeq</a>
